--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,7 @@
     <title>ASE</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    <script type="module" src="/src/main.js"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
